# agentic-ai-basics

./: README.md
a2a_basics/: WebSearchAgent.py  agent_executor.py  main.py  pyproject.toml
langchain_basics/: few_shot.ipynb  json_parser.ipynb  main.ipynb  rag.ipynb  session.ipynb
langgraph_basics/: intent.ipynb  ltm.ipynb  rag.ipynb  stm.ipynb  toolnode.ipynb
mcp_basics/: client.py  pyproject.toml
mcp_basics/config/: tool_server.json
mcp_basics/servers/: tool_server.py
oops_basics/: basics.ipynb  basics.py  circle.py  comprehensions.ipynb  data.py  oop.py  output.ipynb  sort.py  stream.py  tools.py
